<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText="@string/helper_required"
        android:hint="@string/et_email"
        app:endIconMode="clear_text"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/padding_default">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText="@string/helper_required"
        android:hint="@string/et_password"
        app:endIconMode="password_toggle"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/padding_default"
        android:layout_marginTop="@dimen/padding_min">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/padding_default"
        android:layout_marginTop="@dimen/padding_default"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue"/>

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        android:layout_marginTop="@dimen/padding_min"
        android:text="@string/tv_log_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

    <TextView
        android:id="@+id/tvForgotPsw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        android:layout_marginTop="@dimen/padding_min"
        android:text="@string/tv_forgot_psw"/>



</androidx.constraintlayout.widget.ConstraintLayout>