<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_nav_graph"
    app:startDestination="@id/authFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.postacos.ui.fragments.LoginFragment"
        android:label="@string/label_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_self"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_loginFragment_to_deshboardFragment"
            app:destination="@id/deshboardFragment" />
        <action
            android:id="@+id/action_loginFragment_to_signUpFragment"
            app:destination="@id/SignUpFragment" />

    </fragment>
    <fragment
        android:id="@+id/SignUpFragment"
        android:name="com.example.postacos.ui.fragments.SignUpFragment"
        android:label="@string/label_log_up"
        tools:layout="@layout/fragment_sign_up" />
    <action
        android:id="@+id/action_signUpFragment_to_loginFragment"
        app:destination="@+id/loginFragment"/>
    <fragment
        android:id="@+id/authFragment"
        android:name="com.example.postacos.ui.fragments.AuthFragment"
        android:label="@string/label_auth"
        tools:layout="@layout/fragment_auth" >
        <action
            android:id="@+id/action_authFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/deshboardFragment"
        android:name="com.example.postacos.ui.fragments.DeshboardFragment"
        android:label="fragment_deshboard"
        tools:layout="@layout/fragment_deshboard" />
</navigation>