<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.AuthFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/logo_size_login"
        android:layout_height="@dimen/logo_size_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/description_logo"
        android:src="@drawable/ic_logo"/>

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/padding_default"
        android:layout_marginTop="@dimen/padding_default"
        android:text="@string/tv_welcome"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEnter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/padding_default"
        android:layout_marginHorizontal="@dimen/padding_default"
        android:text="@string/btn_enter"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue"/>

</androidx.constraintlayout.widget.ConstraintLayout>